--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>民盛小贷供应链金融服务平台</title>
   <!-- 阿里图标 -->
   <script src="https://at.alicdn.com/t/font_942988_zhzvfltlq4.js"></script>
+
+  <!-- oss -->
+  <script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
   <style type="text/css" scoped>
     /* 引入阿里图标 */
     .icon {
