--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://at.alicdn.com/t/font_942988_zhzvfltlq4.js"></script>
 
   <!-- oss -->
-  <script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
+  <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
   <style type="text/css" scoped>
     /* 引入阿里图标 */
     .icon {
