--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0,user-scalable=no,shrink-to-fit=no">
-  <title>民盛小贷供应链金融服务平台</title>
+  <link rel="icon" type="image/x-icon" href="./src/assets/loan.png">
+  <title>捷易融供应链金融服务系统</title>
   <!-- 阿里图标 -->
   <script src="https://at.alicdn.com/t/font_942988_zhzvfltlq4.js"></script>
 
   <!-- oss -->
-  <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
+  <!-- <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script> -->
   <style type="text/css" scoped>
     /* 引入阿里图标 */
     .icon {
