--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0,user-scalable=no,shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="./src/assets/loan.png">
-  <title>捷易融供应链金融服务平台</title>
+  <title>供应链金融服务平台</title>
   <!-- 阿里图标 -->
   <script src="https://at.alicdn.com/t/font_942988_zhzvfltlq4.js"></script>
 
